--- a/src/app/components/mapa/mapa.component.html
+++ b/src/app/components/mapa/mapa.component.html
@@ -3,7 +3,11 @@
         Mappa
     </mat-card-title>
     <mat-card-content>
-        XYZ
+        <!-- this creates a google map on the page with the given lat/lng from -->
+        <!-- the component as the initial center of the map: -->
+        <agm-map [latitude]="lat" [longitude]="lng" [zoom]="15">
+            <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+        </agm-map>
 
     </mat-card-content>
 </mat-card>
