--- a/src/app/components/mapa/mapa.component.html
+++ b/src/app/components/mapa/mapa.component.html
@@ -1,13 +1,24 @@
 <mat-card>
     <mat-card-title>
-        Mappa
+        Mapa
     </mat-card-title>
     <mat-card-content>
         <!-- this creates a google map on the page with the given lat/lng from -->
         <!-- the component as the initial center of the map: -->
-        <agm-map [latitude]="lat" [longitude]="lng" [zoom]="15">
-            <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+        <agm-map (mapClick)="agregarMarcador( $event )" [latitude]="lat" [longitude]="lng" [zoom]="15">
+            <!-- estos son marcadores que hacen que aparezcan los puntos en el mapa -->
+            <agm-marker *ngFor="let marcador of marcador" [latitude]="marcador.latitud" [longitude]="marcador.longitud">
+                <agm-info-window>
+                    <strong>{{marcador.titulo}}</strong>
+                    <p>
+                        {{marcador.descripcion}}
+                    </p>
+                    <div>
+                        <button mat-raised-button color="primary">Editar</button>
+                        <button mat-raised-button color="warn">Editar</button>
+                    </div>
+                </agm-info-window>
+            </agm-marker>
         </agm-map>
-
     </mat-card-content>
 </mat-card>
