--- a/src/app/components/mapa/mapa.component.html
+++ b/src/app/components/mapa/mapa.component.html
@@ -7,7 +7,7 @@
         <!-- the component as the initial center of the map: -->
         <agm-map (mapClick)="agregarMarcador( $event )" [latitude]="lat" [longitude]="lng" [zoom]="15">
             <!-- estos son marcadores que hacen que aparezcan los puntos en el mapa -->
-            <agm-marker *ngFor="let marcador of marcador" [latitude]="marcador.latitud" [longitude]="marcador.longitud">
+            <agm-marker *ngFor="let marcador of marcador; let i = index;" [latitude]="marcador.latitud" [longitude]="marcador.longitud">
                 <agm-info-window>
                     <strong>{{marcador.titulo}}</strong>
                     <p>
@@ -15,7 +15,7 @@
                     </p>
                     <div>
                         <button mat-raised-button color="primary">Editar</button>
-                        <button mat-raised-button color="warn">Editar</button>
+                        <button (click)="borrarMarcador(i)" mat-raised-button color="warn">Borrar</button>
                     </div>
                 </agm-info-window>
             </agm-marker>
